@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-04-29T01:06:48Z",
-  "count" : 9,
+  "timestamp" : "2025-04-29T12:29:05Z",
+  "count" : 8,
   "count_minmax" : [ 2, 10 ],
-  "count_decinc" : [ -1, +10 ],
-  "uniques" : 7,
+  "count_decinc" : [ -2, +10 ],
+  "uniques" : 6,
   "uniques_minmax" : [ 2, 8 ],
-  "uniques_decinc" : [ -1, +8 ]
+  "uniques_decinc" : [ -2, +8 ]
 }
