@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2025-04-29T01:06:48Z",
+  "timestamp" : "2025-04-29T12:29:05Z",
   "count_outdated" : 4805,
   "uniques_outdated" : 2521,
-  "count" : 4861,
-  "uniques" : 2564,
+  "count" : 4862,
+  "uniques" : 2565,
   "clones" : [
     {
       "timestamp": "2025-04-15T00:00:00Z",
-      "count": 9,
+      "count": 8,
       "count_minmax": [ 2, 10 ],
-      "count_decinc": [ 1, 10 ],
-      "uniques": 7,
+      "count_decinc": [ 2, 10 ],
+      "uniques": 6,
       "uniques_minmax": [ 2, 8 ],
-      "uniques_decinc": [ 1, 8 ]
+      "uniques_decinc": [ 2, 8 ]
     },
     {
       "timestamp": "2025-04-16T00:00:00Z",
@@ -130,6 +130,15 @@
       "uniques": 8,
       "uniques_minmax": [ 8, 8 ],
       "uniques_decinc": [ 0, 8 ]
+    },
+    {
+      "timestamp": "2025-04-29T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
