@@ -1,11 +1,11 @@
 {
   "count": 55,
-  "uniques": 30,
+  "uniques": 29,
   "clones": [
     {
       "timestamp": "2025-04-15T00:00:00Z",
-      "count": 9,
-      "uniques": 7
+      "count": 8,
+      "uniques": 6
     },
     {
       "timestamp": "2025-04-16T00:00:00Z",
@@ -71,6 +71,11 @@
       "timestamp": "2025-04-28T00:00:00Z",
       "count": 10,
       "uniques": 8
+    },
+    {
+      "timestamp": "2025-04-29T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
